--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "ejs": "^2.4.1",
-    "express": "^4.13.4",
-    "mustache-express": "^1.2.2"
+    "express": "^4.13.4"
   }
 }
